Fix debug toolbar not showing up with BS4
Because it has a hidden="hidden" attr which BS4 makes
perma-hidden

--- a/src/static_global/sass/build.sass
+++ b/src/static_global/sass/build.sass
@@ -27,4 +27,4 @@ $fa-font-path: "/static/font-awesome/fonts"
 
 @import "members-table"
 
-$t: 7622223
+$t: 76222223
